# aerohockey-game

./: .gitignore  CMakeLists.txt  Makefile  README.md
game/include/: client.h  dynamic.h  game.h  interface.h  library.h  puck.h  putter.h  scoreboard.h  server.h  textbox.h
game/src/: client.cpp  dynamic.cpp  game.cpp  interface.cpp  main.cpp  main_client.cpp  main_server.cpp  puck.cpp  putter.cpp  scoreboard.cpp  server.cpp  textbox.cpp
